# when-is-it

./: Cargo.toml  dist-workspace.toml  flake.nix
src/: lib.rs  prompt.txt  system.txt
