[package]
name = "when-is-it"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["tracing", "macros"] }
clap = { version = "4.6.0", features = ["derive", "env"] }
color-eyre = "0.6.5"
jiff = "0.2.23"
rig-core = "0.33.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
