[package]
name = "when-is-it"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/frectonz/when-is-it"

[dependencies]
axum = { version = "0.8.8", features = ["tracing", "macros"] }
clap = { version = "4.6.0", features = ["derive", "env"] }
color-eyre = "0.6.5"
hex = "0.4.3"
hmac = "0.13.0"
jiff = "0.2.23"
reqwest = { version = "0.13.2", features = ["json"] }
rig-core = "0.33.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
